# velocity

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  electron-builder.json5  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml
dist-electron/: main.js  preload.mjs
electron/: electron-env.d.ts  main.ts  preload.ts  windows.ts
electron/ipc/: handlers.ts
electron/services/: inputTrackingService.ts  nativeCaptureService.ts
icons/icons/mac/: icon.icns
native-capture-sidecar/: Cargo.toml  README.md
native-capture-sidecar/macos/: NativeCaptureSidecar.swift
native-capture-sidecar/src/: capture.rs  ffmpeg.rs  main.rs  protocol.rs  system.rs  wgc.rs
native-capture-sidecar/src/capture/: macos.rs  mod.rs  windows.rs
scripts/: electronBuilderAfterPack.cjs  prepareNativeCapture.mjs  signDevElectron.cjs
src/: App.tsx  vite-env.d.ts
src/components/launch/: CameraPreviewWindow.tsx  HudPopoverWindow.tsx  LaunchWindow.module.css  LaunchWindow.tsx  SourceSelector.tsx
src/components/video-editor/: AnnotationOverlay.tsx  AnnotationSettingsPanel.tsx  ArrowSvgs.tsx  CropControl.tsx  SettingsPanel.tsx  VideoEditor.tsx  VideoEditorBase.tsx  VideoEditorMac.tsx  VideoEditorWindows.tsx  VideoPlayback.tsx  arrowUtils.ts  types.ts
src/hooks/: useScreenRecorder.ts
src/lib/: assetPath.ts
src/lib/autoZoom/: cursorTrail.ts  generateAutoZoomRegions.ts
src/lib/exporter/: annotationRenderer.ts  index.ts  (+6 more)
src/types/: inputTelemetry.ts  nativeCapture.ts  recordingSession.ts
(+6 files in other folders)
